--- a/package.json
+++ b/package.json
@@ -10,8 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@lottiefiles/lottie-player": "^1.7.1",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
+    "lottie-ios": "3.4.0",
+    "lottie-react-native": "^5.1.5",
     "react": "18.0.0",
-    "react-native": "0.69.8"
+    "react-native": "0.69.8",
+    "react-native-circular-progress": "^1.3.8",
+    "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-progress-circle": "^2.1.0",
+    "react-native-reanimated": "^3.0.2",
+    "react-native-redash": "^18.1.0",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
