--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "lottie-ios": "3.4.0",
-    "lottie-react-native": "^5.1.5",
+    "lottie-react-native": "^5.1.6",
     "react": "18.0.0",
     "react-native": "0.69.8",
     "react-native-circular-progress": "^1.3.8",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "^3.0.2",
     "react-native-redash": "^18.1.0",
