--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.69.8",
     "react-native-circular-progress": "^1.3.8",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-progress-circle": "^2.1.0",
